# SoftwareDev

./: README.md  pyproject.toml
calculator/: form.ui  mainwindow.py  rc_resource.py  resource.qrc  ui_form.py
calculator/modules/: __init__.py  ui_functions.py
calculator/protocols/: calculator.py
